# mrtools

./: CHANGELOG.md  LICENSE  README.md  instructions.md  pyproject.toml
data/: 3dbag_b2_output.city.json  montréal_b4.city.json  montréal_b4_output.city.json
src/mrarea/: __init__.py  cli.py  geometry.py
src/mrtools/: __init__.py  cli.py  geometry.py  processor.py
tests/: __init__.py  test_geometry.py  test_integration.py  test_processor.py
tests/fixtures/: cube.city.json  no_semantics.city.json  otb22.city.json  simple_house.city.json  torus.city.json
