[project]
name = "mrtools"
version = "0.2.0"
description = "MultiRoofs tools for processing CityJSON files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "typer>=0.12.0",
]

[project.scripts]
mrtools = "mrtools.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
